<resources>
    <string name="app_name">appHomeManager-v5</string>
    <string name="login">LOGIN</string>
    <string name="vazio"> </string>
    <string name="dgLogin">Digite seu e-mail</string>
    <string name="dgPassword">Digite sua senha</string>
    <string name="dgConfirmePassword">Confirmar senha</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="campoNaoPreenchido">Preencher o campo obrigatório: </string>
    <string name="falhaAutenticacao">E-mail ou senha inválidos.</string>
    <string name="camposNaoPreenchidos">Preencher os campos obrigatórios: </string>
    <string name="online">On-line</string>
    <string name="offline">Off-line</string>
    <string name="zeroNum">0</string>
    <string name="autoManual">Modo automático</string>
    <string name="secaoControles">Controles</string>
    <string name="secaoNivel">Nível do sensor</string>
    <string name="secaoCaixas">Caixas abastecidas</string>
    <string name="onOff">OnOff</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="churrasqueira_sfc2">sFc2</string>
    <string name="churrasqueira_mdir">mDir</string>
    <string name="churrasqueira_sfc1">sFc1</string>
    <string name="churrasqueira_osopr">oSopr</string>
    <string name="churrasqueira_olamp">oLamp</string>
    <string name="churrasqueira_monoff">mOnOff</string>
    <string name="churrasqueira_oexau">oExau</string>
    <string name="churrasqueira_oagua">oAgua</string>
    <string name="churrasqueira_mhab">mHab</string>
    <string name="title_activity_cisterna">CisternaActivity</string>
    <string name="cisterna">Cisterna</string>
    <string name="valveControle">Válvula Controle</string>
    <string name="valveEntrada">Válvula Entrada</string>
    <string name="bomba">Bomba</string>
    <string name="caixa1">Caixa 1</string>
    <string name="caixa2">Caixa 2</string>
    <string name="caixa3">Caixa 3</string>
    <string name="valveEntradaPrincipal">Válvula Entrada Principal</string>
    <string name="valveEntradaSecundaria">Válvula Entrada Secundária</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cadastrarLSTC">Cadastrar</string>
    <string name="cestaOk">Já na cesta</string>
    <string name="clearBasket">Limpar Cesta</string>
    <string name="clearList">Limpar Lista</string>
    <string name="listClear">(Lista vazia)</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="msgCesta">cesta</string>
    <string name="msgLista">lista</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msgClearProduct">Deseja remover os itens da</string>
    <string name="msgEmptList">Não existem itens na </string>
    <string name="msgProductEmpt">Favor inserir o nome do produto</string>
    <string name="msgProductAdd">adicionado a lista</string>
    <string name="msgProductRemove">removido da lista</string>
    <string name="msgCompartilharLst">Compartilhar Lista</string>
    <string name="msgLstCompras">Lista de Compras</string>
    <string name="msgCompras">Compras</string>
    <string name="msgLstComprasPendente">Existem itens pendentes na lista de compras</string>
    <string name="saveOk">Produto cadastrado</string>
    <string name="tabMinhaLista">Minha Lista</string>
    <string name="tabDespensa">Despensa</string>
    <string name="tabOpcoes">Opções</string>
    <string name="tuyaTitulo">Dispositivos Tuya</string>
    <string name="tuyaAtualizar">Atualizar</string>
    <string name="tuyaNaoConfigurado">Tuya não configurada. Defina TUYA_ACCESS_ID e TUYA_ACCESS_SECRET no local.properties e compile novamente.</string>
    <string name="tuyaSemDispositivos">Nenhum dispositivo controlável encontrado na sua conta do Smart Life.</string>
    <string name="tuyaSemControle">%1$s · sem controle compatível. Pontos de dados: %2$s</string>
    <string name="tuyaErro">Erro na Tuya: %1$s</string>
    <string name="tuyaCenaManual">Cena do Smart Life · toque para executar</string>
    <string name="tuyaExecutar">Executar</string>
    <string name="tuyaNaoConfiguradaCurto">Tuya não configurada</string>
    <string name="tuyaExecutarCenaTitulo">Executar cena</string>
    <string name="tuyaExecutarCenaMensagem">Executar a cena \"%1$s\" agora?</string>
    <string name="tuyaCenaExecutada">Cena \"%1$s\" executada</string>
    <string name="tuyaCenasIndisponiveis">Cenas indisponíveis: %1$s</string>
    <string name="un">un</string>
    <string name="ml">ml</string>
    <string name="kg">Kg</string>
    <string name="voltar">Voltar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="produto">Produto</string>
    <string name="categoria">Categoria</string>
    <string name="msgNomeInvalido">O nome não pode conter . $ # [ ] /</string>
    <string name="msgProdutoJaCadastrado">Produto já cadastrado nesta categoria</string>
    <string name="msgQuantidadeInvalida">Informe uma quantidade maior que zero</string>
    <string name="msgErroListaCompras">Não foi possível carregar a lista de compras</string>
    <string name="msgSemProdutosCategoria">Nenhum produto cadastrado nesta categoria</string>
    <string name="tituloRemoverProduto">Remover produto</string>
    <string name="msgRemoverProduto">Remover %1$s da despensa e da lista de compras?</string>
    <string name="reservatorio">Reservatório</string>
    <string name="utilitarios">Utilitários</string>
    <string name="controle">Controle</string>
    <string name="dashboard">Dashboard</string>
    <string name="cidade">Cidade</string>
    <string name="strNull">--</string>
    <string name="permissaoLocalizacaoNegada">Permissão de localização negada: não é possível exibir o clima.</string>
    <string name="localizacaoIndisponivel">Não foi possível obter a localização.</string>
    <string name="climaIndisponivel">Não foi possível consultar o clima.</string>
    <string name="titleDoorLock">Door Lock</string>
    <string name="titleConfiguration">Configuração</string>
    <string name="titleLiving">Sala</string>
    <string name="titleKitchen">Cozinha</string>
    <string name="titleBedRoom1">Quarto - 1</string>
    <string name="titleBedRoom2">Quarto - 2</string>
    <string name="titleBedRoom3">Quarto - 3</string>
    <string name="titleBedRoom4">Quarto - 4</string>
    <string name="titleBathRoom1">Banheiro - 1</string>
    <string name="titleBathRoom2">Banheiro - 2</string>
    <string name="titleHall">Hall</string>
    <string name="l1LVR">Rua</string>
    <string name="l2LVR">Escada</string>
    <string name="l3LVR">Entrada</string>
    <string name="l4LVR">Spot</string>
    <string name="l5LVR">Sala</string>
    <string name="l6LVR">Bar</string>
    <string name="t1LVR">Tv</string>
    <string name="t2LVR">Sky</string>
    <string name="t3LVR">Som</string>
    <string name="t4LVR">Geral</string>
    <string name="l1KTR">Principal</string>
    <string name="l2KTR">Pia</string>
    <string name="l3KTR">Lavanderia</string>
    <string name="t1KTR">Fogão</string>
    <string name="t2KTR">Microondas</string>
    <string name="t3KTR">Geladeira</string>
    <string name="t4KTR">Máquina</string>
    <string name="t5KTR">Cafeteira</string>
    <string name="t6KTR">Liquidificador</string>
    <string name="t7KTR">Geral</string>
    <string name="t8KTR">Geral</string>
    <string name="t9KTR">Geral</string>
    <string name="l1BDR1">Principal</string>
    <string name="t1BDR1">TV</string>
    <string name="t2BDR1">Computador</string>
    <string name="t3BDR1">Abajur</string>
    <string name="t4BDR1">Geral</string>
    <string name="t5BDR1">Geral</string>
    <string name="t6BDR1">Geral</string>
    <string name="t7BDR1">Geral</string>
    <string name="l1BDR2">Principal</string>
    <string name="t1BDR2">TV</string>
    <string name="t2BDR2">Computador</string>
    <string name="t3BDR2">Abajur</string>
    <string name="t4BDR2">Geral</string>
    <string name="t5BDR2">Geral</string>
    <string name="t6BDR2">Geral</string>
    <string name="t7BDR2">Geral</string>
    <string name="l1BDR3">Principal</string>
    <string name="t1BDR3">TV</string>
    <string name="t2BDR3">Computador</string>
    <string name="t3BDR3">Abajur</string>
    <string name="t4BDR3">Geral</string>
    <string name="t5BDR3">Geral</string>
    <string name="t6BDR3">Geral</string>
    <string name="t7BDR3">Geral</string>
    <string name="l1BDR4">Principal</string>
    <string name="l2BDR4">Banheiro</string>
    <string name="l3BDR4">Chuveiro</string>
    <string name="t1BDR4">TV</string>
    <string name="t2BDR4">Computador</string>
    <string name="t3BDR4">Abajur</string>
    <string name="t4BDR4">Geral</string>
    <string name="t5BDR4">Banheiro</string>
    <string name="l1HALL">Corredor</string>
    <string name="l2HALL">Área</string>
    <string name="t1HALL">Corredor</string>
    <string name="t2HALL">Impressora</string>
    <string name="t3HALL">Roteador</string>
    <string name="t4HALL">Geral</string>
    <string name="t5HALL">Geral</string>
    <string name="t6HALL">Geral</string>
    <string name="l1BTR1">Principal</string>
    <string name="l2BTR1">Chuveiro</string>
    <string name="t1BTR1">Geral</string>
    <string name="l1BTR2">Principal</string>
    <string name="l2BTR2">Chuveiro</string>
    <string name="t1BTR2">Geral</string>
    <string name="light">Lâmpadas</string>
    <string name="power">Tomadas</string>
    <string name="tuyaAtalho">Tuya</string>
    <string name="comodos">Grupos</string>
    <string name="novoComodo">Novo grupo</string>
    <string name="editarComodo">Editar grupo</string>
    <string name="nomeComodo">Nome do grupo</string>
    <string name="icone">Ícone</string>
    <string name="nomeItem">Nome</string>
    <string name="adicionarLampada">+ Lâmpada</string>
    <string name="adicionarTomada">+ Tomada</string>
    <string name="excluir">Excluir</string>
    <string name="nenhumComodo">Nenhum grupo cadastrado.</string>
    <string name="resumoComodo">%1$d dispositivo(s) · %2$d tipo(s)</string>
    <string name="comodoSemItens">Este grupo ainda não tem dispositivos. Escolha os tipos em Configuração.</string>
    <string name="semDispositivoAssociado">Sem dispositivo associado. Associe um em Configuração.</string>
    <string name="dispositivoIndisponivel">Dispositivo indisponível no momento</string>
    <string name="dispositivoOffline">Dispositivo fora do ar</string>
    <string name="erroLerComodos">Não foi possível ler os grupos</string>
    <string name="novaLampada">Lâmpada %1$d</string>
    <string name="novaTomada">Tomada %1$d</string>
    <string name="tuyaSemAssociacao">Tuya: toque para associar um dispositivo</string>
    <string name="tuyaAssociadoA">Tuya: %1$s</string>
    <string name="carregandoDispositivos">Carregando dispositivos…</string>
    <string name="tuyaSemInterruptores">Nenhum interruptor on/off encontrado na sua conta do Smart Life.</string>
    <string name="tuyaNenhum">Nenhum</string>
    <string name="tuyaTituloOffline">%1$s (fora do ar)</string>
    <string name="comodoSemNome">Informe o nome do grupo</string>
    <string name="habilitarComodo">Habilitar ou desabilitar o grupo</string>
    <string name="grupoMedidores">Medidores de energia</string>
    <string name="grupoTermometros">Termômetros</string>
    <string name="adicionarGrupo">+ Adicionar tipo de dispositivo</string>
    <string name="comodoSemGrupos">Este grupo está vazio. Adicione os tipos de dispositivos que ele terá e depois associe cada dispositivo.</string>
    <string name="grupoCortinas">Cortinas</string>
    <string name="grupoChuva">Sensores de chuva</string>
    <string name="grupoAlarmes">Alarmes</string>
    <string name="grupoLuz">Luz ajustável</string>
</resources>