<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/produto">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            android:maxLength="40"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgUnidadeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbUnCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/un" />

        <RadioButton
            android:id="@+id/rbMlCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ml" />

        <RadioButton
            android:id="@+id/rbKgCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/categoria"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="match_parent"
        android:layout_height="48dp" />
</LinearLayout>
